--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Matrimony-Frontend/src/assets/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thirukalyanamalai</title>
+     <title>THIRUKALYANAMALAI</title>
   </head>
   <body>
     <div id="root"></div>
